--- a/Server/package.json
+++ b/Server/package.json
@@ -1,16 +1,23 @@
 {
+  "name": "store-management",
+  "version": "1.0.0",
+  "main": "server.js",
+  "nodejs_version": "22.11.0",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "migrateD": "prisma migrate dev",
+    "migratePr": "prisma migrate deploy"
   },
   "dependencies": {
+    "@prisma/client": "^6.0.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.10.1"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "prisma": "^6.0.1"
   }
 }
